fix: update SEO to Minimal

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover"
     />
-    <title>Blockasset Asset Hub</title>
+    <title>Minimal CRA website</title>
     <meta name="description" content="Minimal CRA website" />
     <meta name="og:title" content="Minimal CRA website" />
     <meta name="og:description" content="Minimal CRA website" />
