chore: cloudflare migration

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,7 @@
     <meta name="og:title" content="Minimal CRA website" />
     <meta name="og:description" content="Minimal CRA website" />
     <meta name="og:type" content="website" />
-    <meta
-      name="og:image"
-      content="https://%REACT_APP_VERCEL_URL%/og-image.png"
-    />
+    <meta name="og:image" content="%REACT_APP_CF_PAGES_URL%/og-image.png" />
     <meta name="og:width" content="1200" />
     <meta name="og:height" content="630" />
     <meta name="twitter:card" content="summary_large_image" />
